--- a/Index.html
+++ b/Index.html
@@ -44,7 +44,7 @@
           
       <h1>🧙‍♂🗡️🤓 </h1>
       <h2>🧡🧡🧡</h2>
-      <p><br>It's dangerous to go alone! Take this sword!<br>&nbsp</p>
+      <p><br>It's dangerous to go alone! Take this.<br>&nbsp</p>
     
   </body>
 </html>
